Fixed color formatting for Trading Aid tables Disabled wrapping whitespaces for horse, jockey and trainer names

--- a/src/main/resources/static/css/tradingAidStyles.css
+++ b/src/main/resources/static/css/tradingAidStyles.css
@@ -9,6 +9,7 @@ table {
     border-spacing: 2px;
     border-color: grey;
     padding: 0;
+    white-space: nowrap;
 }
 
 th, td {
